# EndFieldAntiKick

./: CMakeLists.txt  README.md  README_EN.md  anti_afk_config.txt  build.bat
.github/workflows/: release.yml
src/: anti_afk.cpp  proxy_d3dcompiler.cpp  proxy_vulkan_full.cpp  version.rc
